feat(url management): update the properties and delete a specific short URL
